# multi_mouse

multi_mouse_client/: .gitignore  setup.cfg
multi_mouse_client/multi-mouse-client/: mmc.py
multi_mouse_server/: main.cpp
multi_mouse_server/include/: easysocket.hpp
