[bumpversion]
current_version = 0.0.1
commit = True
tag = True
push = False
message = "Bump version: {current_version} → {new_version} [ci skip]"

[bumpversion:file:version.txt]

[bumpversion:file:multi_mouse_client/__init__.py]

[metadata]
name = multi_mouse_client
version = file: version.txt
author = mpfaffenberger
email = mike.pfaffenberger@gmail.com
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: C++ :: 14
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Topic :: Data Visualization
	Typing :: Typed
platforms =
	MacOS X
	Linux
	Windows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/snagajob/zenith

[options]
packages = find:
include_package_data = True

setup_requires =
	setuptools>=41
	scikit-build
